k8s/nodeports-dynamic.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    # nodePort: removed - Kubernetes will assign automatically
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management-nodeport
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - port: 15672
    targetPort: 15672
    # nodePort: removed - Kubernetes will assign automatically
    name: management
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-gateway-nodeport
spec:
  type: NodePort
  selector:
    app: ipfs
  ports:
  - port: 8080
    targetPort: 8080
    # nodePort: removed - Kubernetes will assign automatically
    name: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-api-nodeport
spec:
  type: NodePort
  selector:
    app: ipfs
  ports:
  - port: 5001
    targetPort: 5001
    # nodePort: removed - Kubernetes will assign automatically
    name: api
