k8s/nodeports.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30432
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management-nodeport
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - port: 15672
    targetPort: 15672
    nodePort: 30672
    name: management
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-gateway-nodeport
spec:
  type: NodePort
  selector:
    app: ipfs
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    name: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-api-nodeport
spec:
  type: NodePort
  selector:
    app: ipfs
  ports:
  - port: 5001
    targetPort: 5001
    nodePort: 30501
    name: api
